--- a/random-world-generator.csproj
+++ b/random-world-generator.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>random_world_generator</RootNamespace>
-    <nowarn>IDE0028;CA1050;IDE0290;IDE0003</nowarn>
+    <nowarn>IDE0028;CA1050;IDE0290;IDE0003;IDE0305</nowarn>
   </PropertyGroup>
 
 </Project>
